--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       .catch(err => console.error("SW failed:", err));
   }
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4577193717043192"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
