--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                             <input type="text" id="d-city" placeholder="Place" required>
                             <input type="tel" id="d-phone" placeholder="Phone Number" required>
-                
+                                            <input type="date" id="d-last-donated" title="Last Donated Date">
                             
                             <button type="submit" class="btn btn-primary">Add to Database</button>
                         </form>
